--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,41 @@
 @import "globals";
 
 .header {
-  
+  position: fixed;
+  width: 100%;
+  max-width: 1300px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  color: black;
+
+  &__title {
+    font-size: 24px;
+  }
+
+  &__navbar {
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+    }
+
+    &__item {
+      margin: 0 15px;
+      font-size: 16px;
+      font-weight: bold;
+      color: black;
+      text-decoration: none;
+      transition: all .2s;
+
+      &:hover {
+        color: $color-primary;
+        fill: $color-primary;
+      }
+    }
+  }
 }
