--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   width: 100%;
   max-width: 1300px;
   left: 50%;
+  top: 0;
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
@@ -32,6 +33,72 @@
   fill: #55b5e5;
 }
 
+.hero {
+  height: 100vh;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 50px;
+}
+.hero__left {
+  width: 60%;
+  padding-right: 30px;
+}
+.hero__left__title {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.hero__left__subtitle {
+  font-size: 22px;
+  color: #666;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.hero__left__text {
+  font-size: 16px;
+  line-height: 1.5;
+}
+.hero__left__icons {
+  display: flex;
+  margin-top: 20px;
+}
+.hero__left__icons a {
+  margin-right: 10px;
+}
+.hero__right {
+  width: 40%;
+  margin-left: 50px;
+  text-align: right;
+  height: 400px;
+}
+.hero__right__img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-image: url(../img/my-photo.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 1000px) {
+  .hero {
+    flex-direction: column;
+    margin-top: 100px;
+  }
+  .hero__left {
+    width: 90%;
+    padding: 0;
+  }
+  .hero__right {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 50px;
+  }
+}
 * {
   margin: 0;
   padding: 0;
