--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,6 +5,7 @@
   width: 100%;
   max-width: 1300px;
   left: 50%;
+  top: 0;
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
