--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -17,6 +17,40 @@
       font-size: 32px;
       font-weight: bold;
       margin-bottom: 5px;
+      display: inline-block;
+
+      overflow: hidden;
+      white-space: nowrap;
+      letter-spacing: 0.15em;
+      border-right: 0.15em solid orangered;
+      animation: typing 5s steps(40, end) infinite,
+                cursor-blink 0.75s step-end infinite;
+
+      @keyframes typing {
+        from {
+          width: 100px;
+        }
+        50% {
+          width: 315px;
+        }
+        80% {
+          width: 315px;
+        }
+        to {
+          width: 100px;
+        }
+      }
+      
+      /* The cursor  blinking effect */
+      @keyframes cursor-blink {
+        from,
+        to {
+          border-color: transparent;
+        }
+        50% {
+          border-color: orangered;
+        }
+      }
     }
 
     &__subtitle {
