--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,19 @@
 .header {
   position: fixed;
+  background-color: #fefefe;
+  clip-path: polygon();
+  border-radius: 0 0 30px 30px;
+  z-index: 3;
   width: 100%;
-  max-width: 1300px;
+  max-width: 1500px;
+  box-shadow: 2px 4px 4px rgba(51, 51, 51, 0.25);
   left: 50%;
   top: 0;
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px 30px;
   color: black;
 }
 .header__title {
@@ -50,6 +55,35 @@
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 5px;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  letter-spacing: 0.15em;
+  border-right: 0.15em solid orangered;
+  animation: typing 5s steps(40, end) infinite, cursor-blink 0.75s step-end infinite;
+  /* The cursor  blinking effect */
+}
+@keyframes typing {
+  from {
+    width: 100px;
+  }
+  50% {
+    width: 315px;
+  }
+  80% {
+    width: 315px;
+  }
+  to {
+    width: 100px;
+  }
+}
+@keyframes cursor-blink {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orangered;
+  }
 }
 .hero__left__subtitle {
   font-size: 22px;
