--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
 .header {
   position: fixed;
-  background-color: #fefefe;
-  clip-path: polygon();
-  border-radius: 0 0 30px 30px;
+  margin-top: 10px;
   z-index: 3;
   width: 100%;
   max-width: 1500px;
-  box-shadow: 2px 4px 4px rgba(51, 51, 51, 0.25);
   left: 50%;
   top: 0;
   transform: translateX(-50%);
+  background: rgba(85, 181, 229, 0.5);
+  border-radius: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,8 +33,8 @@
   transition: all 0.2s;
 }
 .header__navbar__item:hover {
-  color: #55b5e5;
-  fill: #55b5e5;
+  color: white;
+  fill: white;
 }
 
 .hero {
@@ -48,7 +47,7 @@
   padding: 0 50px;
 }
 .hero__left {
-  width: 60%;
+  width: 40%;
   padding-right: 30px;
 }
 .hero__left__title {
@@ -59,30 +58,54 @@
   overflow: hidden;
   white-space: nowrap;
   letter-spacing: 0.15em;
-  border-right: 0.15em solid orangered;
-  animation: typing 5s steps(40, end) infinite, cursor-blink 0.75s step-end infinite;
-  /* The cursor  blinking effect */
-}
-@keyframes typing {
-  from {
-    width: 100px;
-  }
-  50% {
-    width: 315px;
-  }
-  80% {
-    width: 315px;
-  }
-  to {
-    width: 100px;
-  }
+  border-right: 0.15em solid #666;
 }
 @keyframes cursor-blink {
   from, to {
     border-color: transparent;
   }
   50% {
-    border-color: orangered;
+    border-color: #666;
+  }
+}
+.hero__left .typing {
+  animation: typing 3s steps(9, end) infinite, cursor-blink 0.75s step-end infinite;
+}
+@keyframes typing {
+  from {
+    width: 95px;
+  }
+  40% {
+    width: 315px;
+  }
+  60% {
+    width: 315px;
+  }
+  85% {
+    width: 95px;
+  }
+  100% {
+    width: 95px;
+  }
+}
+.hero__left .typing2 {
+  animation: typing2 3.5s steps(20, end) infinite, cursor-blink 0.75s step-end infinite;
+}
+@keyframes typing2 {
+  from {
+    width: 95px;
+  }
+  40% {
+    width: 580px;
+  }
+  60% {
+    width: 580px;
+  }
+  85% {
+    width: 95px;
+  }
+  100% {
+    width: 95px;
   }
 }
 .hero__left__subtitle {
@@ -94,6 +117,7 @@
 .hero__left__text {
   font-size: 16px;
   line-height: 1.5;
+  text-align: justify;
 }
 .hero__left__icons {
   display: flex;
@@ -104,7 +128,7 @@
 }
 .hero__right {
   width: 40%;
-  margin-left: 50px;
+  margin-left: 200px;
   text-align: right;
   height: 400px;
 }
