--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,16 +2,15 @@
 
 .header {
   position: fixed;
-  background-color: #fefefe;
-  clip-path: polygon();
-  border-radius: 0 0 30px 30px;
+  margin-top: 10px;
   z-index: 3;
   width: 100%;
   max-width: 1500px;
-  box-shadow: 2px 4px 4px rgba($color: #333, $alpha: .25);
   left: 50%;
   top: 0;
   transform: translateX(-50%);
+  background: rgba($color: $color-primary, $alpha: .5);
+  border-radius: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,8 +38,8 @@
       transition: all .2s;
 
       &:hover {
-        color: $color-primary;
-        fill: $color-primary;
+        color: white;
+        fill: white;
       }
     }
   }
