mobile header styles

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -115,13 +115,13 @@
     width: 40%;
     margin-left: 200px;
     text-align: right;
-    height: 400px;
+    height: 500px;
 
     &__img {
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      background-image: url(../img/my-photo.jpg);
+      background-image: url(../img/my-photo3.jpg);
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
