--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,43 @@
 .header {
   position: fixed;
-  margin-top: 10px;
   z-index: 3;
-  width: 100%;
+  width: calc(100% - 20px);
   max-width: 1500px;
   left: 50%;
-  top: 0;
+  top: 10px;
   transform: translateX(-50%);
   background: rgba(255, 255, 255, 0.95);
   border-radius: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 20px 30px;
   color: black;
 }
+.header__mobile-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .header__title {
-  font-size: 24px;
+  font-size: 20px;
+}
+@media only screen and (max-width: 400px) {
+  .header__title {
+    font-size: 16px;
+  }
+}
+.header__navbar {
+  display: none;
+  margin-top: 20px;
 }
 .header__navbar ul {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   list-style: none;
 }
 .header__navbar__item {
-  margin: 0 15px;
+  position: relative;
+  display: inline-block;
+  margin: 10px 0;
   font-size: 16px;
   font-weight: bold;
   text-decoration: none;
@@ -33,11 +45,66 @@
   color: black;
   fill: black;
 }
+.header__navbar__item::before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  width: 5px;
+  background-color: black;
+  top: 50%;
+  left: -15px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+}
 .header__navbar__item:hover {
-  color: white;
-  fill: white;
+  color: #55b5e5;
+  fill: #55b5e5;
+}
+.header__navbar--show {
+  display: block;
+}
+.header__hamburger {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  height: 28px;
+  width: 28px;
+}
+.header__hamburger--hidden {
+  display: none;
 }
 
+@media only screen and (min-width: 800px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header__mobile-flex {
+    display: block;
+  }
+  .header__title {
+    font-size: 24px;
+  }
+  .header__navbar {
+    margin: 0;
+    display: block;
+  }
+  .header__navbar ul {
+    flex-direction: row;
+    list-style: none;
+  }
+  .header__navbar__item {
+    margin: 0 15px;
+    font-size: 17px;
+  }
+  .header__navbar__item::before {
+    display: none;
+  }
+  .header__hamburger {
+    display: none;
+  }
+}
 .hero {
   height: 100vh;
   max-width: 1400px;
@@ -137,13 +204,13 @@
   width: 40%;
   margin-left: 200px;
   text-align: right;
-  height: 400px;
+  height: 500px;
 }
 .hero__right__img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-image: url(../img/my-photo.jpg);
+  background-image: url(../img/my-photo3.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
