--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,35 +2,46 @@
 
 .header {
   position: fixed;
-  margin-top: 10px;
   z-index: 3;
-  width: 100%;
+  width: calc(100% - 20px);
   max-width: 1500px;
   left: 50%;
-  top: 0;
+  top: 10px;
   transform: translateX(-50%);
   background: rgba($color: white, $alpha: .95);
   border-radius: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 20px 30px;
   color: black;
 
+  &__mobile-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   &__title {
-    font-size: 24px;
+    font-size: 20px;
+
+    @media only screen and (max-width: 400px) {
+      font-size: 16px;
+    }
   }
 
   &__navbar {
+    display: none;
+    margin-top: 20px;
+    
     ul {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
       list-style: none;
     }
 
     &__item {
-      margin: 0 15px;
+      position: relative;
+      display: inline-block;
+      margin: 10px 0;
       font-size: 16px;
       font-weight: bold;
       text-decoration: none;
@@ -38,10 +49,77 @@
       color: black;
       fill: black;
 
-      &:hover {
-        color: white;
-        fill: white;
+      &::before {
+        content: '';
+        position: absolute;
+        height: 5px;
+        width: 5px;
+        background-color: black;
+        top: 50%;
+        left: -15px;
+        transform: translateY(-50%);
+        border-radius: 50%;
       }
+
+      &:hover {
+        color: $color-primary;
+        fill: $color-primary;
+      }
+    }
+
+    &--show {
+      display: block;
+    }
+  }
+
+  &__hamburger {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    height: 28px;
+    width: 28px;
+
+    &--hidden {
+      display: none;
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__mobile-flex {
+      display: block;
+    }
+  
+    &__title {
+      font-size: 24px;
+    }
+  
+    &__navbar {
+      margin: 0;
+      display: block;
+      
+      ul {
+        flex-direction: row;
+        list-style: none;
+      }
+  
+      &__item {
+        margin: 0 15px;
+        font-size: 17px;
+
+        &::before {
+          display: none;
+        }
+      }
+    }
+
+    &__hamburger {
+      display: none;
     }
   }
 }
