--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -3,19 +3,12 @@
 .hero {
   height: 100vh;
   max-width: 1400px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 50px;
-  color: white;
+  margin-top: 150px;
+  padding: 0 30px;
 
   &__left {
-    width: 40%;
-    padding-right: 30px;
-
     &__title {
-      font-size: 32px;
+      font-size: 24px;
       font-weight: bold;
       margin-bottom: 5px;
       display: inline-block;
@@ -23,7 +16,7 @@
       overflow: hidden;
       white-space: nowrap;
       letter-spacing: 0.15em;
-      border-right: 0.15em solid $color-gray;
+      border-right: 0.15em solid white;
       
       @keyframes cursor-blink {
         from,
@@ -31,59 +24,13 @@
           border-color: transparent;
         }
         50% {
-          border-color: $color-gray;
-        }
-      }
-    }
-
-    .typing {
-      animation: typing 3s steps(9, end) infinite,
-                cursor-blink 0.75s step-end infinite;
-
-      @keyframes typing {
-        from {
-          width: 95px;
-        }
-        40% {
-          width: 315px;
-        }
-        60% {
-          width: 315px;
-        }
-        85% {
-          width: 95px;
-        }
-        100% {
-          width: 95px;
-        }
-      }
-    }
-
-    .typing2 {
-      animation: typing2 3.5s steps(20, end) infinite,
-                cursor-blink 0.75s step-end infinite;
-
-      @keyframes typing2 {
-        from {
-          width: 95px;
-        }
-        40% {
-          width: 580px;
-        }
-        60% {
-          width: 580px;
-        }
-        85% {
-          width: 95px;
-        }
-        100% {
-          width: 95px;
+          border-color: white;
         }
       }
     }
 
     &__subtitle {
-      font-size: 22px;
+      font-size: 20px;
       color: $color-gray;
       font-weight: 500;
       margin-bottom: 15px;
@@ -93,6 +40,7 @@
       font-size: 16px;
       line-height: 1.5;
       text-align: justify;
+      color: white;
     }
 
     &__icons {
@@ -112,10 +60,10 @@
   }
 
   &__right {
-    width: 40%;
-    margin-left: 200px;
-    text-align: right;
-    height: 500px;
+    margin: 0 auto;
+    margin-top: 70px;
+    width: 80%;
+    aspect-ratio: 1 / 1;
 
     &__img {
       width: 100%;
@@ -129,21 +77,82 @@
   }
 }
 
+.typing {
+  animation: typing 3s steps(9, end) infinite,
+            cursor-blink 0.75s step-end infinite;
 
-@media only screen and (max-width: 1000px) {
-  .hero {
-    flex-direction: column;
-    margin-top: 100px;
-
-    &__left {
-      width: 90%;
-      padding: 0;
+  @keyframes typing {
+    from {
+      width: 20%;
     }
-
-    &__right {
+    40% {
       width: 100%;
-      margin-left: 0;
-      margin-top: 50px;
+    }
+    60% {
+      width: 100%;
+    }
+    85% {
+      width: 20%;
+    }
+    100% {
+      width: 20%;
     }
   }
+}
+
+.typing2 {
+  animation: typing2 3.5s steps(20, end) infinite,
+            cursor-blink 0.75s step-end infinite;
+
+  @keyframes typing2 {
+    from {
+      width: 20%;
+    }
+    40% {
+      width: 100%;
+    }
+    60% {
+      width: 100%;
+    }
+    85% {
+      width: 20%;
+    }
+    100% {
+      width: 20%;
+    }
+  }
+}
+
+
+@media only screen and (min-width: 1000px) {
+
+.hero {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__left {
+    min-width: 580px;
+
+    &__title {
+      font-size: 32px;
+    }
+
+    &__subtitle {
+      font-size: 22px;
+    }
+
+    &__text {
+      font-size: 16px;
+      max-width: 450px;
+    }
+  }
+
+  &__right {
+    width: 30%;
+    margin: 0;
+    margin-left: 100px;
+  }
+}
 }
