--- a/css/styles.css
+++ b/css/styles.css
@@ -109,13 +109,28 @@
   height: 100vh;
   max-width: 1400px;
   margin-top: 150px;
-  padding: 0 30px;
+  padding: 0 50px;
+}
+@media only screen and (max-width: 450px) {
+  .hero {
+    padding: 0 25px;
+  }
 }
 .hero__left__title {
-  font-size: 24px;
-  font-weight: bold;
   margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  color: white;
+}
+.hero__left__title h2, .hero__left__title span {
+  font-size: 24px;
+}
+.hero__left__title span {
   display: inline-block;
+  width: 0;
+  font-weight: bold;
+  margin-left: 15px;
   overflow: hidden;
   white-space: nowrap;
   letter-spacing: 0.15em;
@@ -156,7 +171,7 @@
 .hero__right {
   margin: 0 auto;
   margin-top: 70px;
-  width: 80%;
+  width: 90%;
   aspect-ratio: 1/1;
 }
 .hero__right__img {
@@ -167,6 +182,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  border: 10px solid #55b5e5;
 }
 
 .typing {
@@ -174,7 +190,7 @@
 }
 @keyframes typing {
   from {
-    width: 20%;
+    width: 0;
   }
   40% {
     width: 100%;
@@ -183,10 +199,10 @@
     width: 100%;
   }
   85% {
-    width: 20%;
+    width: 0;
   }
   100% {
-    width: 20%;
+    width: 0;
   }
 }
 
@@ -195,7 +211,7 @@
 }
 @keyframes typing2 {
   from {
-    width: 20%;
+    width: 0;
   }
   40% {
     width: 100%;
@@ -204,10 +220,10 @@
     width: 100%;
   }
   85% {
-    width: 20%;
+    width: 0;
   }
   100% {
-    width: 20%;
+    width: 0;
   }
 }
 
@@ -215,13 +231,14 @@
   .hero {
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 80px;
   }
   .hero__left {
     min-width: 580px;
   }
-  .hero__left__title {
+  .hero__left__title h2, .hero__left__title span {
     font-size: 32px;
   }
   .hero__left__subtitle {
@@ -234,7 +251,6 @@
   .hero__right {
     width: 30%;
     margin: 0;
-    margin-left: 100px;
   }
 }
 .aboutme {
