--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -4,19 +4,35 @@
   height: 100vh;
   max-width: 1400px;
   margin-top: 150px;
-  padding: 0 30px;
+  padding: 0 50px;
+
+  @media only screen and (max-width: 450px) {
+    padding: 0 25px;
+  }
 
   &__left {
     &__title {
-      font-size: 24px;
-      font-weight: bold;
       margin-bottom: 5px;
-      display: inline-block;
+      display: flex;
+      align-items: center;
+      width: fit-content;
+      color: white;
 
-      overflow: hidden;
-      white-space: nowrap;
-      letter-spacing: 0.15em;
-      border-right: 0.15em solid white;
+      h2, span {
+        font-size: 24px;
+      }
+
+      span {
+        display: inline-block;
+        width: 0;
+        font-weight: bold;
+        margin-left: 15px;
+
+        overflow: hidden;
+        white-space: nowrap;
+        letter-spacing: 0.15em;
+        border-right: 0.15em solid white;
+      }
       
       @keyframes cursor-blink {
         from,
@@ -62,7 +78,7 @@
   &__right {
     margin: 0 auto;
     margin-top: 70px;
-    width: 80%;
+    width: 90%;
     aspect-ratio: 1 / 1;
 
     &__img {
@@ -73,6 +89,7 @@
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
+      border: 10px solid $color-primary;
     }
   }
 }
@@ -83,7 +100,7 @@
 
   @keyframes typing {
     from {
-      width: 20%;
+      width: 0;
     }
     40% {
       width: 100%;
@@ -92,10 +109,10 @@
       width: 100%;
     }
     85% {
-      width: 20%;
+      width: 0;
     }
     100% {
-      width: 20%;
+      width: 0;
     }
   }
 }
@@ -106,7 +123,7 @@
 
   @keyframes typing2 {
     from {
-      width: 20%;
+      width: 0;
     }
     40% {
       width: 100%;
@@ -115,10 +132,10 @@
       width: 100%;
     }
     85% {
-      width: 20%;
+      width: 0;
     }
     100% {
-      width: 20%;
+      width: 0;
     }
   }
 }
@@ -129,14 +146,17 @@
 .hero {
   margin: 0 auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 80px;
 
   &__left {
     min-width: 580px;
 
     &__title {
-      font-size: 32px;
+      h2, span {
+        font-size: 32px;
+      }
     }
 
     &__subtitle {
@@ -152,7 +172,6 @@
   &__right {
     width: 30%;
     margin: 0;
-    margin-left: 100px;
   }
 }
 }
