--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -11,6 +11,8 @@
   }
 
   &__left {
+    position: relative;
+    
     &__title {
       margin-bottom: 5px;
       display: flex;
@@ -69,7 +71,7 @@
         transition: fill .3s;
 
         &:hover {
-          fill: black;
+          fill: $color-primary;
         }
       }
     }
@@ -89,7 +91,8 @@
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
-      border: 10px solid $color-primary;
+      box-shadow: 8px 8px 10px rgba($color: #010101, $alpha: .5);
+      border: 8px solid black;
     }
   }
 }
@@ -143,35 +146,68 @@
 
 @media only screen and (min-width: 1000px) {
 
-.hero {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 80px;
+  .hero {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 80px;
 
-  &__left {
-    min-width: 580px;
+    &__left {
+      min-width: 620px;
 
-    &__title {
-      h2, span {
-        font-size: 32px;
+      &::before {
+        content: '';
+        position: absolute;
+        top: -65%;
+        left: -20%;
+        background-color: rgba($color: #000000, $alpha: .25);
+        border-radius: 50%;
+        width: 125%;
+        aspect-ratio: 3 / 2;
+        filter: blur(3px);
+        z-index: -1;
+      }
+
+      &__title {
+        h2, span {
+          font-size: 32px;
+        }
+      }
+
+      &__subtitle {
+        font-size: 22px;
+      }
+
+      &__text {
+        font-size: 16px;
+        max-width: 450px;
       }
     }
 
-    &__subtitle {
-      font-size: 22px;
-    }
-
-    &__text {
-      font-size: 16px;
-      max-width: 450px;
+    &__right {
+      width: 30%;
+      margin: 0;
     }
   }
 
-  &__right {
-    width: 30%;
-    margin: 0;
-  }
+  // @media only screen and (max-width: 1200px) {
+  //   .hero {
+  //     &__before {
+  //       display: none;
+  //     }     
+  //     &__left {
+  //       &__title {
+  //         h2, span {
+  //           font-size: 28px;
+  //         }
+  //       }
+  
+  //       &__text {
+  //         font-size: 14px;
+  //       }
+  //     }
+  //   }
+  // }
 }
-}
+
