--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -6,8 +6,9 @@
   margin-top: 150px;
   padding: 0 50px;
 
-  @media only screen and (max-width: 450px) {
+  @media only screen and (max-width: 500px) {
     padding: 0 25px;
+    margin-top: 130px;
   }
 
   &__left {
@@ -34,6 +35,16 @@
         white-space: nowrap;
         letter-spacing: 0.15em;
         border-right: 0.15em solid white;
+
+      }
+      @media screen and (max-width: 500px) {
+        display: block;
+
+        span {
+          margin: 0;
+          margin-top: 5px;
+          font-size: 20px;
+        }
       }
       
       @keyframes cursor-blink {
@@ -48,14 +59,14 @@
     }
 
     &__subtitle {
-      font-size: 20px;
+      font-size: 18px;
       color: $color-gray;
       font-weight: 500;
       margin-bottom: 15px;
     }
 
     &__text {
-      font-size: 16px;
+      font-size: 14px;
       line-height: 1.5;
       text-align: justify;
       color: white;
@@ -82,6 +93,10 @@
     margin-top: 70px;
     width: 90%;
     aspect-ratio: 1 / 1;
+
+    @media only screen and (min-width: 800px) {
+      width: 60%;
+    }
 
     &__img {
       width: 100%;
@@ -159,7 +174,7 @@
       &::before {
         content: '';
         position: absolute;
-        top: -65%;
+        top: -61%;
         left: -20%;
         background-color: rgba($color: #000000, $alpha: .25);
         border-radius: 50%;
@@ -190,24 +205,16 @@
       margin: 0;
     }
   }
-
-  // @media only screen and (max-width: 1200px) {
-  //   .hero {
-  //     &__before {
-  //       display: none;
-  //     }     
-  //     &__left {
-  //       &__title {
-  //         h2, span {
-  //           font-size: 28px;
-  //         }
-  //       }
-  
-  //       &__text {
-  //         font-size: 14px;
-  //       }
-  //     }
-  //   }
-  // }
 }
 
+@media only screen and (max-width: 1200px) {
+  .hero {
+    &__left {
+      min-width: 0;
+      
+      &::before {
+        display: none;
+      }   
+    }
+  }
+}
