--- a/css/styles.css
+++ b/css/styles.css
@@ -105,106 +105,6 @@
     display: none;
   }
 }
-.hero {
-  height: 100vh;
-  max-width: 1400px;
-  margin-top: 150px;
-  padding: 0 50px;
-}
-@media only screen and (max-width: 500px) {
-  .hero {
-    padding: 0 25px;
-    margin-top: 130px;
-  }
-}
-.hero__left {
-  position: relative;
-}
-.hero__left__title {
-  margin-bottom: 5px;
-  display: flex;
-  align-items: center;
-  width: fit-content;
-  color: white;
-}
-.hero__left__title h2, .hero__left__title span {
-  font-size: 24px;
-}
-.hero__left__title span {
-  display: inline-block;
-  width: 0;
-  font-weight: bold;
-  margin-left: 15px;
-  overflow: hidden;
-  white-space: nowrap;
-  letter-spacing: 0.15em;
-  border-right: 0.15em solid white;
-}
-@media screen and (max-width: 500px) {
-  .hero__left__title {
-    display: block;
-  }
-  .hero__left__title span {
-    margin: 0;
-    margin-top: 5px;
-    font-size: 20px;
-  }
-}
-@keyframes cursor-blink {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: white;
-  }
-}
-.hero__left__subtitle {
-  font-size: 18px;
-  color: #bbb;
-  font-weight: 500;
-  margin-bottom: 15px;
-}
-.hero__left__text {
-  font-size: 14px;
-  line-height: 1.5;
-  text-align: justify;
-  color: white;
-}
-.hero__left__icons {
-  display: flex;
-  margin-top: 20px;
-}
-.hero__left__icons a {
-  fill: white;
-  margin-right: 10px;
-  transition: fill 0.3s;
-}
-.hero__left__icons a:hover {
-  fill: #d20fff;
-}
-.hero__right {
-  margin: 0 auto;
-  margin-top: 70px;
-  width: 90%;
-  aspect-ratio: 1/1;
-}
-@media only screen and (min-width: 800px) {
-  .hero__right {
-    width: 60%;
-  }
-}
-.hero__right__img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-image: url(../img/my-photo3.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  box-shadow: 8px 8px 10px rgba(1, 1, 1, 0.5);
-  border: 8px solid black;
-}
-
 .typing {
   animation: typing 3s steps(9, end) infinite, cursor-blink 0.75s step-end infinite;
 }
@@ -247,6 +147,112 @@
   }
 }
 
+.hero {
+  height: 100vh;
+  max-width: 1400px;
+  padding: 0 25px;
+  margin-top: 130px;
+}
+.hero__left {
+  position: relative;
+}
+.hero__left__title {
+  margin-bottom: 5px;
+  width: fit-content;
+  display: block;
+  color: white;
+}
+.hero__left__title h2, .hero__left__title span {
+  font-size: 18px;
+}
+.hero__left__title span {
+  display: inline-block;
+  width: 0;
+  font-weight: bold;
+  margin-top: 5px;
+  overflow: hidden;
+  white-space: nowrap;
+  letter-spacing: 0.15em;
+  border-right: 0.15em solid white;
+}
+@keyframes cursor-blink {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+.hero__left__subtitle {
+  font-size: 16px;
+  color: #bbb;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+.hero__left__text {
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: justify;
+  color: white;
+}
+.hero__left__icons {
+  display: flex;
+  margin-top: 20px;
+}
+.hero__left__icons a {
+  fill: white;
+  margin-right: 10px;
+  transition: fill 0.3s;
+}
+.hero__left__icons a:hover {
+  fill: #d20fff;
+}
+.hero__right {
+  margin: 0 auto;
+  margin-top: 70px;
+  width: 90%;
+  aspect-ratio: 1/1;
+}
+.hero__right__img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-image: url(../img/my-photo3.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: 8px 8px 10px rgba(1, 1, 1, 0.5);
+  border: 8px solid black;
+}
+
+@media only screen and (min-width: 500px) {
+  .hero {
+    margin-top: 150px;
+    padding: 0 50px;
+  }
+  .hero__left__title {
+    display: flex;
+    align-items: center;
+  }
+  .hero__left__title h2 {
+    font-size: 24px;
+  }
+  .hero__left__title span {
+    margin: 0;
+    margin-left: 15px;
+    font-size: 24px;
+  }
+  .hero__left__subtitle {
+    font-size: 18px;
+  }
+  .hero__left__text {
+    font-size: 16px;
+    max-width: 450px;
+  }
+  .hero__right {
+    width: 50%;
+  }
+}
 @media only screen and (min-width: 1000px) {
   .hero {
     margin: 0 auto;
@@ -276,10 +282,6 @@
   .hero__left__subtitle {
     font-size: 22px;
   }
-  .hero__left__text {
-    font-size: 16px;
-    max-width: 450px;
-  }
   .hero__right {
     width: 30%;
     margin: 0;
@@ -306,18 +308,6 @@
 
 body {
   background: url(../img/codioful-formerly-gradienta-m_7p45JfXQo-unsplash.jpg) center/cover;
-}
-
-.fadein-animation {
-  transition: all 0.8s;
-  opacity: 0;
-  transform: translateY(50px);
-}
-
-.fadein-animation.inview {
-  opacity: 1;
-  transform: none;
-  transition-delay: 0.3s;
 }
 
 /*# sourceMappingURL=styles.css.map */
