--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -147,7 +147,7 @@
         position: absolute;
         top: -61%;
         left: -20%;
-        background-color: rgba($color: #000000, $alpha: .25);
+        background-color: rgba($color: $color-tertiary, $alpha: .75);
         border-radius: 50%;
         width: 125%;
         aspect-ratio: 3 / 2;
